tests/NormalTests/paczka1/fuzzy1/15879438.err
Error in line 8: fJRFHbec A541 79,7
Error in line 4: mvZ9f A984 20,9
Error in line 18: HNY73 S496 37,7
Error in line 19: al0bA77hL A197 39,0
Error in line 23: al0bA77hL S496 67,7
Error in line 31: hEk8zrT5L2A S496 66,4
Error in line 35: 6um41Ep6V A541 98,5
